# Gemini-Telegram-Bot

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  sample_config.env
648TRJ1kcE.image/: jpeg
bot/: __init__.py  __main__.py  config.py  version.py
bot/database/: MongoDb.py  database.py
bot/helpers/: BingImageCreater.py  ai.py  chatlulu.py  decorators.py  filters.py  functions.py  msimg.py  nvidia.py  ocr.py  pasting_services.py  pricehistory.py  start_constants.py
bot/plugins/developer/: broadcast.py  misc.py  terminal.py  updater.py
bot/plugins/sudo/: dbstats.py  inpect.py  log.py  serverstats.py  speedtest.py
bot/plugins/users/: chatai.py  gemini.py  imgen.py  misc.py  ocr.py  paste.py  ping.py  start.py
